@@ -2,7 +2,6 @@ package edu.farmingdale.demo1.simulation;
 
 import java.util.*;
 
-import edu.farmingdale.demo1.simulation.GameTypes;
 import edu.farmingdale.demo1.simulation.GameTypes.Region;
 import edu.farmingdale.demo1.simulation.GameTypes.GameState;
 import edu.farmingdale.demo1.simulation.GameTypes.GameEventDef;
@@ -14,6 +13,7 @@ import edu.farmingdale.demo1.simulation.GameTypes.EventLogEntry;
 public class SimulationModel {
 
     private static final Random random = new Random();
+    private static final int EVENT_REUSE_COOLDOWN_EVENTS = 3;
     private static final String[] FEED_USERNAMES = {
             "Ava Sol", "Orion Vale", "Mira Quill", "Juno Hart", "Soren Pike", "Lena Frost",
             "Kai Ember", "Nia Pulse", "Ezra Bloom", "Tala Reed", "Iris Voss", "Noah Skye"
@@ -103,7 +103,11 @@ public class SimulationModel {
     }
 
     public static GameState applyPlayerCommand(GameState state, GameEventDef event) {
-        GameState updatedState = applySingleEvent(state, event, true);
+        if (!isAvailable(state, event.id)) {
+            return state;
+        }
+
+        GameState updatedState = applyEvent(state, event);
         updatedState.commandHistory.add(event.id);
         updatedState.pendingTriggeredEventId = null;
 
@@ -253,8 +257,20 @@ public class SimulationModel {
                 )
         );
 
-        newState.eventLog.add(0, logEntry);
-        newState.cooldowns.put(event.id, newState.year + event.cooldown);
+        newState.eventLog.addFirst(logEntry);
+        Map<String, Integer> nextCooldowns = new HashMap<>();
+        for (Map.Entry<String, Integer> entry : newState.cooldowns.entrySet()) {
+            if (event.id.equals(entry.getKey())) {
+                continue;
+            }
+
+            int remainingTriggers = entry.getValue() - 1;
+            if (remainingTriggers > 0) {
+                nextCooldowns.put(entry.getKey(), remainingTriggers);
+            }
+        }
+        nextCooldowns.put(event.id, EVENT_REUSE_COOLDOWN_EVENTS);
+        newState.cooldowns = nextCooldowns;
         newState.feedPosts.addAll(0, generateEventFeedPosts(newState, event, affectedRegions));
 
         return newState;
@@ -277,7 +293,7 @@ public class SimulationModel {
             default -> -8;
         };
 
-        state.temperatureVolatility = Math.max(0, Math.min(100, state.temperatureVolatility + volatilityShift));
+        state.temperatureVolatility = Math.clamp(state.temperatureVolatility + volatilityShift, 0, 100);
     }
 
     private static GameEventDef determineTriggeredEvent(GameState state) {
@@ -336,7 +352,7 @@ public class SimulationModel {
     }
 
     private static boolean shouldTriggerFamine(GameState state) {
-        return (hasRecentEvent(state, "Ice Age", 2) || hasRecentEvent(state, "Drought", 2))
+        return (hasRecentEvent(state, "Ice Age") || hasRecentEvent(state, "Drought"))
                 && isAvailable(state, "famine");
     }
 
@@ -348,7 +364,7 @@ public class SimulationModel {
 
     private static boolean shouldTriggerDepression(GameState state) {
         return state.globalStats.economicHealth <= 35
-                && (state.lowEconomyStreak >= 2 || countRecentDisasters(state, 4) >= 3)
+                && (state.lowEconomyStreak >= 2 || countRecentDisasters(state) >= 3)
                 && isAvailable(state, "depression");
     }
 
@@ -358,12 +374,17 @@ public class SimulationModel {
                 && isAvailable(state, "economic_boom");
     }
 
-    private static boolean isAvailable(GameState state, String eventId) {
-        Integer nextAvailableYear = state.cooldowns.get(eventId);
-        return nextAvailableYear == null || state.year >= nextAvailableYear;
+    public static boolean isEventAvailableForPlayer(GameState state, String eventId) {
+        return isAvailable(state, eventId);
     }
 
-    private static int countRecentDisasters(GameState state, int limit) {
+    private static boolean isAvailable(GameState state, String eventId) {
+        Integer remainingTriggers = state.cooldowns.get(eventId);
+        return remainingTriggers == null || remainingTriggers <= 0;
+    }
+
+    private static int countRecentDisasters(GameState state) {
+        final int limit = 4;
         int disasterCount = 0;
         int checked = 0;
 
@@ -382,7 +403,8 @@ public class SimulationModel {
         return disasterCount;
     }
 
-    private static boolean hasRecentEvent(GameState state, String eventName, int limit) {
+    private static boolean hasRecentEvent(GameState state, String eventName) {
+        final int limit = 2;
         int checked = 0;
 
         for (EventLogEntry entry : state.eventLog) {
